# public/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key `special-key` to test the authorization filters.",
+    "description": "You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key `special-key` to test the authorization filters.",
     "version": "1.0.0",
     "title": "客户管理服务",
     "termsOfService": "http://swagger.io/terms/",
@@ -38,6 +38,14 @@
     {
       "name": "customer",
       "description": "顾客信息接口"
+    },
+    {
+      "name": "cusEvent",
+      "description": "顾客重要事件接口"
+    },
+    {
+      "name": "cusRecord",
+      "description": "顾客跟踪记录接口"
     },
     {
       "name": "record",
@@ -126,7 +134,6 @@
         ],
         "summary": "新增公司",
         "description": "",
-        "operationId": "addPet",
         "consumes": [
           "application/json",
           "application/xml"
@@ -139,7 +146,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Pet object that needs to be added to the store",
+            "description": "管理员权限",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Company"
@@ -524,7 +531,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Pet object that needs to be added to the store",
+            "description": "管理员权限",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Tags"
@@ -684,6 +691,38 @@
         }
       }
     },
+    "/tagByIds": {
+      "post": {
+        "tags": [
+          "tags"
+        ],
+        "summary": "根据一组分类id获取分类列表",
+        "description": "",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "ids",
+            "required": true,
+            "example": {
+              "ids": ["5f6c3340935a6b617441eb0f", "5f99083ce9b8906e2c5d34a7"]
+            }
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
     "/product": {
       "post": {
         "tags": [
@@ -703,7 +742,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Pet object that needs to be added to the store",
+            "description": "暂时不用手动新增",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Products"
@@ -763,6 +802,38 @@
           },
           "404": {
             "description": "User not found"
+          }
+        }
+      }
+    },
+    "/productByIds": {
+      "post": {
+        "tags": [
+          "product"
+        ],
+        "summary": "根据一组产品id获取产品列表",
+        "description": "",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "ids",
+            "required": true,
+            "example": {
+              "ids": ["1", "5f99083ce9b8906e2c5d34a7"]
+            }
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
           }
         }
       }
@@ -1094,6 +1165,302 @@
             "description": "User not found"
           }
         }
+      }
+    },
+    "/cusEvent": {
+      "post": {
+        "tags": [
+          "cusEvent"
+        ],
+        "summary": "新增顾客重要事件",
+        "description": "",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CusEvent"
+            }
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/cusEvents": {
+      "get": {
+        "tags": [
+          "cusEvent"
+        ],
+        "summary": "获取顾客重要事件列表",
+        "description": "",
+        "produces": [
+          "application/x-www-form-urlencoded",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "customer_id",
+            "in": "query",
+            "description": "顾客id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/CusEvent"
+            }
+          },
+          "400": {
+            "description": "Invalid username supplied"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/cusEvent/{id}": {
+      "get": {
+        "tags": [
+          "cusEvent"
+        ],
+        "summary": "查找顾客单条事件",
+        "description": "暂时没啥用",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/CusEvent"
+            }
+          },
+          "400": {
+            "description": "Invalid username supplied"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "cusEvent"
+        ],
+        "summary": "更新顾客重要事件",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "name that need to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CusEvent"
+            }
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "cusEvent"
+        ],
+        "summary": "删除顾客重要信息",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ]
+      }
+    },
+    "/cusRecord": {
+      "post": {
+        "tags": [
+          "cusRecord"
+        ],
+        "summary": "新增顾客跟踪记录",
+        "description": "",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CusRecord"
+            }
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/cusRecords": {
+      "get": {
+        "tags": [
+          "cusRecord"
+        ],
+        "summary": "获取顾客跟踪记录列表",
+        "description": "",
+        "produces": [
+          "application/x-www-form-urlencoded",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "customer_id",
+            "in": "query",
+            "description": "顾客id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/CusRecord"
+            }
+          },
+          "400": {
+            "description": "Invalid username supplied"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/cusRecord/{id}": {
+      "get": {
+        "tags": [
+          "cusRecord"
+        ],
+        "summary": "查找顾客单条记录",
+        "description": "暂时没啥用",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/CusRecord"
+            }
+          },
+          "400": {
+            "description": "Invalid username supplied"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "cusRecord"
+        ],
+        "summary": "更新顾客跟踪记录",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "name that need to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CusRecord"
+            }
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "cusRecord"
+        ],
+        "summary": "删除顾客跟踪记录",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ]
       }
     },
     "/record": {
@@ -1570,11 +1937,11 @@
         },
         "products": {
           "type": "Array",
-          "example": "[1,2,3]"
+          "example": [1,2,3]
         },
         "tags": {
           "type": "Array",
-          "example": "[1,2,3]"
+          "example": [1,2,3]
         },
         "describe": {
           "type": "string",
@@ -1604,10 +1971,6 @@
     "Record": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
         "pro_id": {
           "type": "string",
           "example": "5f991346a064b62578023102"
@@ -1672,6 +2035,76 @@
       },
       "xml": {
         "name": "Record"
+      }
+    },
+    "CusEvent": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string",
+          "required": true,
+          "description": "顾客姓名 必填"
+        },
+        "date": {
+          "type": "string"
+        },
+        "gif_record": {
+          "type": "string",
+          "description": "礼物记录"
+        },
+        "customer_id": {
+          "type": "string",
+          "required": true,
+          "description": "顾客id 必填"
+        },
+        "remark": {
+          "type": "string",
+          "description": "备注"
+        }
+      },
+      "xml": {
+        "name": "Tag"
+      }
+    },
+    "CusRecord": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string",
+          "required": true,
+          "description": "顾客姓名 必填"
+        },
+        "date": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string",
+          "description": "内容"
+        },
+        "deal": {
+          "type": "boolean",
+          "description": "是否成交 true是 false否"
+        },
+        "customer_id": {
+          "type": "string",
+          "required": true,
+          "description": "顾客id 必填"
+        },
+        "reason": {
+          "type": "string",
+          "description": "原因"
+        }
+      },
+      "xml": {
+        "name": "Tag"
       }
     }
   },
